--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-     "react-hook-form": "^7.62.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.62.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -51,13 +52,14 @@
     "eslint-plugin-storybook": "^9.1.6",
     "husky": "^8.0.0",
     "lint-staged": "^16.1.6",
+    "msw": "^2.11.2",
     "playwright": "^1.55.0",
     "prettier": "^3.6.2",
     "storybook": "^9.1.6",
     "storybook-addon-pseudo-states": "^9.1.6",
     "tailwindcss": "^4",
     "typescript": "^5",
-     "vitest": "^3.2.4"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
