--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
     "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-query-devtools": "^5.87.4",
