--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-query-devtools": "^5.87.4",
+    "@vis.gl/react-maplibre": "^8.0.4",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.543.0",
+    "maplibre-gl": "^5.7.3",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -29,6 +31,7 @@
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "supercluster": "^8.0.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
