--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@vis.gl/react-maplibre": "^8.0.4",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.543.0",
     "maplibre-gl": "^5.7.3",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "recharts": "^3.2.1",
     "supercluster": "^8.0.1",
     "zod": "^4.1.5"
   },
